Add supprot to run an ansible playbook
- Add an API to upload a playbook
- Add an API to run an ansible playbook on a rackHD node
- fix new eslint errors

Implements: blueprint shovel-deployment-capability
